--- a/mednafen/src/lzma/Makefile.am.inc
+++ b/mednafen/src/lzma/Makefile.am.inc
@@ -1,4 +1,8 @@
-mednafen_SOURCES 	+=	lzma/src/Alloc.c lzma/src/Bra86.c lzma/src/BraIA64.c lzma/src/CpuArch.c lzma/src/Delta.c lzma/src/Threads.c	
-mednafen_SOURCES 	+=	lzma/src/LzFind.c lzma/src/LzFindMt.c lzma/src/Lzma86Dec.c lzma/src/LzmaEnc.c lzma/src/LzmaDec.c
+mednafen_SOURCES 	+=	lzma/src/Alloc.c lzma/src/Bra86.c lzma/src/BraIA64.c lzma/src/CpuArch.c lzma/src/Delta.c 	
+mednafen_SOURCES 	+=	lzma/src/LzFind.c lzma/src/Lzma86Dec.c lzma/src/LzmaEnc.c lzma/src/LzmaDec.c
+
+if WIN32
+mednafen_SOURCES 	+=	lzma/src/Threads.c lzma/src/LzFindMt.c 
+endif
 
 
