use groovymister wrapper

--- a/mednafen/src/mister/Makefile.am.inc
+++ b/mednafen/src/mister/Makefile.am.inc
@@ -1,4 +1,4 @@
-mednafen_SOURCES 	+=	mister/mister.cpp 
+mednafen_SOURCES 	+=	mister/lz4/lz4.c mister/lz4/lz4hc.c mister/groovymister.cpp  mister/groovymister_wrapper.cpp mister/mister.cpp 
 
 
 
